--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
+project(ft_IRC)
 
-# set the project name and version
-project(ft_IRC VERSION 1.0)
-
-# specify the C++ standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-include_directories(include)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
 set (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wunreachable-code")
 
-file(GLOB SOURCES "src/*.cpp")
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_subdirectory(server)
+add_subdirectory(client)
