--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
+    - uses: textbook/git-checkout-submodule-action@master
     - name: Create Build Directory
       run: cmake -E make_directory ${{runner.workspace}}/build
 
