--- a/server/tests/CMakeLists.txt
+++ b/server/tests/CMakeLists.txt
@@ -13,4 +13,4 @@ macro(package_add_test TESTNAME)
         FOLDER tests)
 endmacro()
 
-package_add_test(TCP_lib_test test_tcp_lib.cpp)
+package_add_test(test_init test_init.cpp)
