--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-set (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wunreachable-code -g")
-
+set (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wunreachable-code -fsanitize=address -g")
 
 add_subdirectory(tcp_lib)
 add_subdirectory(server)
 add_subdirectory(client)
 
-
-option(TEST "Building unit tests")
-if(TEST)
+option(PACKAGE_TESTS "Build tests" OFF)
+if(PACKAGE_TESTS)
     enable_testing()
     include(GoogleTest)
+    add_subdirectory(extern/googletest)
     add_subdirectory(tcp_lib/tests)
+    add_subdirectory(server/tests)
 endif()
