add nix support to testing setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,15 @@ add_subdirectory(tcp_lib)
 add_subdirectory(server)
 add_subdirectory(client)
 
+option(NIX "Use nix for dependencies" OFF)
 option(PACKAGE_TESTS "Build tests" OFF)
+
 if(PACKAGE_TESTS)
     enable_testing()
     include(GoogleTest)
-    add_subdirectory(extern/googletest)
+    if (NOT(NIX))
+        add_subdirectory(extern/googletest)
+    endif()
     add_subdirectory(tcp_lib/tests)
     add_subdirectory(server/tests)
 endif()
