added IOHandler interface and TCPIOHandler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,6 @@ if(PACKAGE_TESTS)
         add_subdirectory(extern/googletest)
     endif()
     add_subdirectory(tcp_lib/tests)
+    add_subdirectory(shared_lib/tests)
     add_subdirectory(server/tests)
 endif()
