--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,4 +6,4 @@ file(GLOB SOURCES "src/*.cpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries (${PROJECT_NAME} LINK_PUBLIC tcp_lib shared_lib)
+target_link_libraries (${PROJECT_NAME} LINK_PUBLIC shared_lib)
