--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(irc_server VERSION 1.0)
 
-file(GLOB SOURCES "src/*.cpp")
+file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
