--- a/server/tests/CMakeLists.txt
+++ b/server/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ package_add_test( ClientDatabase_test
 ClientDatabase_test.cpp
 ../src/ClientDatabase.cpp
 ../src/Client.cpp
+../src/Server.cpp
 )
 package_add_test( ChannelDatabase_test
 ChannelDatabase_test.cpp
@@ -43,6 +44,7 @@ package_add_test( USERHandler_test
 package_add_test( Server_test
     Server_test.cpp
     ../src/Client.cpp
+    ../src/Server.cpp
 )
 package_add_test( User_test
     User_test.cpp
@@ -51,4 +53,10 @@ package_add_test( User_test
 package_add_test( QUITHandler_test
     ./HandlerTests/QUITHandler_test.cpp
     ../src/MessageHandlers/QUITHandler.cpp
+)
+package_add_test( ClientUpgrade_test
+ClientUpgrade_test.cpp
+../src/ClientDatabase.cpp
+../src/Client.cpp
+../src/Server.cpp
 )
