Adds initial ServerConfig setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ if(PACKAGE_TESTS)
     enable_testing()
     include(GoogleTest)
     if (NOT(NIX))
+		add_subdirectory(extern/json)
         add_subdirectory(extern/googletest)
     endif()
     add_subdirectory(shared_lib/tests)
