User maintains a list of channels it is in. DisconnectClient in Clientdatabase is responsible for calling RemoveUserFromAllChannels.

--- a/server/tests/CMakeLists.txt
+++ b/server/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ ClientDatabase_test.cpp
 ../src/ClientDatabase.cpp
 ../src/Client.cpp
 ../src/Server.cpp
+../src/User.cpp
 )
 package_add_test( ChannelDatabase_test
 ChannelDatabase_test.cpp
@@ -46,23 +47,25 @@ package_add_test( JOINHandler_test
 ../src/MessageHandlers/JOINHandler.cpp
 )
 package_add_test( Server_test
-    Server_test.cpp
-    ../src/Client.cpp
-    ../src/Server.cpp
+Server_test.cpp
+../src/Client.cpp
+../src/Server.cpp
 )
 package_add_test( User_test
-    User_test.cpp
-    ../src/Client.cpp
+User_test.cpp
+../src/User.cpp
+../src/Client.cpp
 )
 package_add_test( QUITHandler_test
-    ./HandlerTests/QUITHandler_test.cpp
-    ../src/MessageHandlers/QUITHandler.cpp
+./HandlerTests/QUITHandler_test.cpp
+../src/MessageHandlers/QUITHandler.cpp
 )
 package_add_test( ClientUpgrade_test
 ClientUpgrade_test.cpp
 ../src/ClientDatabase.cpp
 ../src/Client.cpp
 ../src/Server.cpp
+../src/User.cpp
 )
 
 package_add_test( PRIVMSGHandler_test
