--- a/config.json
+++ b/config.json
@@ -1,14 +1,18 @@
 {
 	"server-data": {
 		"id": "90L",
-		"name": "codam.mr.com",
-		"network": "codam.mr.com",
+		"name": "codam_mr_com",
+		"network": "codam_mr_com",
 		"description": "The best server in the whole wide world."
 	},
 	"hosting-data": {
 		"port": "5000",
 		"address": "0.0.0.0"
 	},
+	"authorized-servers": [
+		["codam.mr.com", "0.0.0.0", "5000"],
+		["server2", "0.0.0.0", "5001"]
+	],
 	"log-settings": {
 		"default-level": "DEBUG",
 		"log-levels": [
