--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
 			["IRCServer", "DEBUG"],
 			["ServerConfig", "INFO"],
 			["Client", "INFO"],
-			["MD", "INFO"],
+			["MD", "DEBUG"],
 			["ClientDatabase", "DEBUG"],
 			["ChannelDatabase", "INFO"],
 			["IOController", "INFO"]
