--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 	"server-data": {
 		"id": "90L",
-		"name": "codam_mr_com",
-		"network": "codam_mr_com",
+		"name": "codam.mr.com",
+		"network": "codam.mr.com",
 		"description": "The best server in the whole wide world."
 	},
 	"hosting-data": {
@@ -14,8 +14,7 @@
 		["mavanhe", "mooiejongenenzo"]
 	],
 	"authorized-servers": [
-		["codam.mr.com", "0.0.0.0", "5000"],
-		["server2", "0.0.0.0", "5001"]
+		["codam.irc.com", "0.0.0.0", "5001"]
 	],
 	"log-settings": {
 		"default-level": "DEBUG",
@@ -29,5 +28,5 @@
 			["IOController", "INFO"]
 		]
 	},
-	"ping-time": 15
+	"ping-time": 120
 }
