--- a/configs/config_2.json
+++ b/configs/config_2.json
@@ -7,7 +7,10 @@
 	},
 	"hosting-data": {
 		"port": "5005",
-		"address": "0.0.0.0"
+		"ssl_port": "5006",
+		"address": "0.0.0.0",
+		"ssl_crt": "./certs/domain.crt",
+		"ssl_key": "./certs/domain.key"
 	},
 	"administrators": [
 		["rkuijper", "youshouldhashthis"],
