--- a/config.json
+++ b/config.json
@@ -7,7 +7,10 @@
 	},
 	"hosting-data": {
 		"port": "5000",
-		"address": "0.0.0.0"
+		"ssl_port": "5001",
+		"address": "0.0.0.0",
+		"ssl_crt": "./certs/domain.crt",
+		"ssl_key": "./certs/domain.key"
 	},
 	"administrators": [
 		["rkuijper", "youshouldhashthis"],
@@ -24,11 +27,12 @@
 	"log-settings": {
 		"default-level": "DEBUG",
 		"log-levels": [
-			["IRCServer", "DEBUG"],
+			["IRCServer", "INFO"],
 			["ServerConfig", "INFO"],
 			["Client", "INFO"],
-			["MD", "DEBUG"],
-			["ClientDatabase", "DEBUG"],
+			["SOCKET", "INFO"],
+			["MD", "INFO"],
+			["ClientDatabase", "INFO"],
 			["ChannelDatabase", "INFO"],
 			["SERVERHandler", "DEBUG"],
 			["IOController", "INFO"]
