--- a/configs/config_2.json
+++ b/configs/config_2.json
@@ -14,14 +14,14 @@
 	},
 	"administrators": [
 		["rkuijper", "youshouldhashthis"],
-		["mavanhe", "mooiejongenenzo"]
+		["mavanhe", "pass"]
 	],
 	"authorized-servers": {
 		"codam.mr.com": {
 			"ip": "0.0.0.0",
 			"port": "5000",
-			"recv_pass": "pass1",
-			"send_pass": "pass2"
+			"recv_pass": "pass2",
+			"send_pass": "pass1"
 		}
 	},
 	"log-settings": {
@@ -37,5 +37,5 @@
 			["IOController", "INFO"]
 		]
 	},
-	"ping-time": 120
+	"ping-time": 300
 }
