--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -14,7 +14,7 @@
 	},
 	"administrators": [
 		["rkuijper", "youshouldhashthis"],
-		["mavanhe", "mooiejongenenzo"]
+		["mavanhe", "pass"]
 	],
 	"authorized-servers": {
 		"codam.irc.com": {
@@ -25,7 +25,7 @@
 		}
 	},
 	"log-settings": {
-		"default-level": "DEBUG",
+		"default-level": "ERROR",
 		"log-levels": [
 			["IRCServer", "DEBUG"],
 			["ServerConfig", "INFO"],
@@ -37,5 +37,5 @@
 			["IOController", "INFO"]
 		]
 	},
-	"ping-time": 120
+	"ping-time": 300
 }
