--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -1,8 +1,8 @@
 {
 	"server-data": {
 		"id": "90L",
-		"name": "codam.mr.com",
-		"network": "codam.mr.com",
+		"name": "codam.s1.com",
+		"network": "codam.s1.com",
 		"description": "The best server in the whole wide world."
 	},
 	"hosting-data": {
@@ -17,9 +17,15 @@
 		["mavanhe", "pass"]
 	],
 	"authorized-servers": {
-		"codam.irc.com": {
+		"codam.s2.com": {
 			"ip": "0.0.0.0",
-			"port": "5005",
+			"port": "5002",
+			"recv_pass": "pass1",
+			"send_pass": "pass2"
+		},
+		"codam.s3.com": {
+			"ip": "0.0.0.0",
+			"port": "5004",
 			"recv_pass": "pass1",
 			"send_pass": "pass2"
 		}
@@ -27,14 +33,8 @@
 	"log-settings": {
 		"default-level": "ERROR",
 		"log-levels": [
-			["IRCServer", "DEBUG"],
-			["ServerConfig", "INFO"],
-			["Client", "INFO"],
-			["MD", "DEBUG"],
-			["ClientDatabase", "DEBUG"],
-			["ChannelDatabase", "INFO"],
-			["SERVERHandler", "DEBUG"],
-			["IOController", "INFO"]
+			["IRCServer", "INFO"],
+			["ServerConfig", "INFO"]
 		]
 	},
 	"ping-time": 300
