--- a/configs/config_2.json
+++ b/configs/config_2.json
@@ -1,13 +1,13 @@
 {
 	"server-data": {
 		"id": "90L",
-		"name": "codam.irc.com",
-		"network": "codam.mr.com",
+		"name": "codam.s2.com",
+		"network": "codam.s2.com",
 		"description": "The best server in the whole wide world."
 	},
 	"hosting-data": {
-		"port": "5005",
-		"ssl_port": "5006",
+		"port": "5002",
+		"ssl_port": "5003",
 		"address": "0.0.0.0",
 		"ssl_crt": "./certs/domain.crt",
 		"ssl_key": "./certs/domain.key"
@@ -17,9 +17,15 @@
 		["mavanhe", "pass"]
 	],
 	"authorized-servers": {
-		"codam.mr.com": {
+		"codam.s1.com": {
 			"ip": "0.0.0.0",
 			"port": "5000",
+			"recv_pass": "pass2",
+			"send_pass": "pass1"
+		},
+		"codam.s3.com": {
+			"ip": "0.0.0.0",
+			"port": "5004",
 			"recv_pass": "pass2",
 			"send_pass": "pass1"
 		}
