--- a/configs/config_3.json
+++ b/configs/config_3.json
@@ -1,25 +1,31 @@
 {
 	"server-data": {
 		"id": "90L",
-		"name": "codam.mr.com",
-		"network": "codam.mr.com",
+		"name": "codam.s3.com",
+		"network": "codam.s3.com",
 		"description": "The best server in the whole wide world."
 	},
 	"hosting-data": {
-		"port": "5000",
-		"ssl_port": "5001",
+		"port": "5004",
+		"ssl_port": "5005",
 		"address": "0.0.0.0",
 		"ssl_crt": "./certs/domain.crt",
 		"ssl_key": "./certs/domain.key"
 	},
 	"administrators": [
 		["rkuijper", "youshouldhashthis"],
-		["mavanhe", "mooiejongenenzo"]
+		["mavanhe", "pass"]
 	],
 	"authorized-servers": {
-		"codam.irc.com": {
+		"codam.s1.com": {
 			"ip": "0.0.0.0",
-			"port": "5005",
+			"port": "5000",
+			"recv_pass": "pass1",
+			"send_pass": "pass2"
+		},
+		"codam.s2.com": {
+			"ip": "0.0.0.0",
+			"port": "5002",
 			"recv_pass": "pass1",
 			"send_pass": "pass2"
 		}
@@ -27,16 +33,10 @@
 	"log-settings": {
 		"default-level": "ERROR",
 		"log-levels": [
-			["IRCServer", "INFO"],
-			["ServerConfig", "INFO"],
-			["Client", "INFO"],
-			["SOCKET", "INFO"],
-			["MD", "INFO"],
-			["ClientDatabase", "INFO"],
-			["ChannelDatabase", "INFO"],
+			["IRCServer", "DEBUG"],
 			["SERVERHandler", "DEBUG"],
-			["IOController", "INFO"]
+			["ServerConfig", "INFO"]
 		]
 	},
-	"ping-time": 120
+	"ping-time": 300
 }
